# space_invaders

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  cleanup.sh  configure.sh  make.sh  run.sh  runtests.sh
.github/workflows/: cmake.yml
configuration/: Config.hpp.in
res/shaders/: Shaders.shader
res/spr/: alien0  alien1  alien2  alien3  alien4  alien5  alien_bullet0  alien_bullet1  alien_death  player  player_bullet  spritesheet_text
src/: Buffer.cpp  Buffer.h  Buffer.hpp  CMakeLists.txt  Compression.cpp  Compression.h  Compression.hpp  Game.cpp  Game.h  Game.hpp  GameObject.cpp  GameObject.h  GameObject.hpp  Global.hpp  Input.cpp  Input.h  Input.hpp  Io.cpp  Io.h  Io.hpp  Logger.cpp  Logger.h  Logger.hpp  Main.cpp  Position.cpp  Position.h  Size.cpp  Size.h  Size.hpp  Spaceobject.cpp  Spaceobject.h  Sprites.cpp  Sprites.h  Sprites.hpp  Timer.cpp  Timer.h  Timer.hpp  Tools.cpp  Tools.h  Tools.hpp  (+5 more)
test/: CMakeLists.txt  InputTest.cpp  SizeTest.cpp
